@@ -1,3 +1,7 @@
+2025-02-28 Francois Suter (Idéative)  <typo3@ideative.ch>
+
+    * Add possibility to disable a configuration, resolves #365
+
 2025-02-26 Francois Suter (Idéative)  <typo3@ideative.ch>
 
     * Store user name rather than uid in log records, resolves #363
